FISH-8652: Downgrade map construction.